--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-img {
+/* img {
   width: 100%;
 }
 
@@ -10,4 +10,4 @@ img {
   height: 100vh;
   margin-top: -24px;
   margin-bottom: -50px;
-}
+} */
